<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>pihcore</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>PIH Core Module</name>
	<description>Core metadata and configuration included in all PIH distributions</description>
	<url>https://wiki.openmrs.org/display/docs/PIH+Core+Module+Module</url>

	<developers>
		<developer>
			<name>PIH</name>
		</developer>
	</developers>

	<organization>
		<name>PIH</name>
		<url>http://pih.org</url>
	</organization>

	<scm>
		<connection>scm:git:git@github.com:PIH/openmrs-module-pihcore.git</connection>
		<developerConnection>scm:git:git@github.com:PIH/openmrs-module-pihcore.git</developerConnection>
		<url>scm:git:git@github.com:PIH/openmrs-module-pihcore.git</url>
	</scm>

	<distributionManagement>
		<repository>
			<id>openmrs-repo-modules-pih</id>
			<name>Modules</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules-pih/</url>
		</repository>
		<snapshotRepository>
			<id>openmrs-repo-modules-pih-snapshots</id>
			<name>OpenMRS Snapshots</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules-pih-snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<modules>
		<module>api</module>
		<module>omod</module>
	</modules>

    <properties>
        <openMRSVersion>2.3.0</openMRSVersion>
        <openMRSwebVersion>2.3.0</openMRSwebVersion>
        <haiticoreVersion>1.0.0</haiticoreVersion>
        <emrapiVersion>1.30.0</emrapiVersion>
        <paperrecordVersion>1.3.0</paperrecordVersion>
        <emrVersion>2.2.0</emrVersion>
        <uiframeworkVersion>3.18.0</uiframeworkVersion>
        <appframeworkVersion>2.16.0</appframeworkVersion>
        <metadatasharingVersion>1.7.0</metadatasharingVersion>
        <metadatamappingVersion>1.3.5</metadatamappingVersion>
        <metadatadeployVersion>1.12.1</metadatadeployVersion>
        <htmlformentryVersion>3.10.0</htmlformentryVersion>
        <htmlformentry19extVersion>1.7</htmlformentry19extVersion>
        <htmlformentryuiVersion>1.11.2</htmlformentryuiVersion>
        <calculationVersion>1.2.1</calculationVersion>
        <reportingVersion>1.20.0</reportingVersion>
        <reportinguiVersion>1.6.0</reportinguiVersion>
        <htmlwidgetsVersion>1.6.4</htmlwidgetsVersion>
        <serializationxstreamVersion>0.2.14</serializationxstreamVersion>
        <idgenVersion>4.5.0</idgenVersion>
        <namephoneticsVersion>1.17.0</namephoneticsVersion>
        <pacsintegrationVersion>1.7.0</pacsintegrationVersion>
        <addresshierarchyVersion>2.14.2</addresshierarchyVersion>
        <providermanagementVersion>2.11.0</providermanagementVersion>
        <eventVersion>2.8.0</eventVersion>
        <logicVersion>0.5.2</logicVersion>
        <importpatientfromwsVersion>1.0</importpatientfromwsVersion>
        <uilibraryVersion>1.5</uilibraryVersion>
        <appuiVersion>1.13.0</appuiVersion>
        <dispensingVersion>1.1.0</dispensingVersion>
        <uicommonsVersion>2.14.0</uicommonsVersion>
        <registrationcoreVersion>1.9.0</registrationcoreVersion>
        <registrationappVersion>1.19.0</registrationappVersion>
        <radiologyappVersion>1.5.0</radiologyappVersion>
        <coreappsVersion>1.29.0</coreappsVersion>
        <webservicesRestVersion>2.27.0-SNAPSHOT</webservicesRestVersion>
        <appointmentschedulingVersion>1.9.0</appointmentschedulingVersion>
        <appointmentschedulinguiVersion>1.7.0</appointmentschedulinguiVersion>
        <testutilsVersion>1.7.0</testutilsVersion>
        <printerVersion>1.4.0</printerVersion>
        <allergyapiVersion>1.4</allergyapiVersion>
        <allergyuiVersion>1.5</allergyuiVersion>
        <chartsearchVersion>1.5</chartsearchVersion>
        <attachmentsVersion>2.3.0</attachmentsVersion>
        <labtrackingappVersion>1.1.0</labtrackingappVersion>
        <!-- Need to phase this out. -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- Begin OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <version>${openMRSVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.test</groupId>
            <artifactId>openmrs-test</artifactId>
            <version>${openMRSVersion}</version>
            <type>pom</type>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.h2database</groupId>
                    <artifactId>h2</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.3.173</version>
            <scope>test</scope>
        </dependency>

        <!-- End OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatasharing-api</artifactId>
            <version>${metadatasharingVersion}</version>
            <scope>provided</scope>
        </dependency>

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>metadatadeploy-api</artifactId>
			<version>${metadatadeployVersion}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>metadatadeploy-api-1.10</artifactId>
			<version>${metadatadeployVersion}</version>
			<scope>provided</scope>
		</dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatamapping-api</artifactId>
            <version>${metadatamappingVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api-2.2</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api-1.12</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
            <version>${emrapiVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>addresshierarchy-api</artifactId>
            <version>${addresshierarchyVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>registrationcore-api</artifactId>
            <version>${registrationcoreVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>registrationapp-api</artifactId>
            <version>${registrationappVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>radiologyapp-api</artifactId>
            <version>${radiologyappVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>providermanagement-api</artifactId>
            <version>${providermanagementVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emr-api</artifactId>
            <version>${emrVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api-tests</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api-1.10</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api-2.0</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api-2.2</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
            <version>${reportingVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api-2.0</artifactId>
            <version>${reportingVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>calculation-api</artifactId>
            <version>${calculationVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-2.0</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uiframework-api</artifactId>
            <version>${uiframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen-api</artifactId>
            <version>${idgenVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>namephonetics-api-2.x</artifactId>
            <version>${namephoneticsVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>paperrecord-api</artifactId>
            <version>${paperrecordVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>printer-api</artifactId>
            <version>${printerVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>coreapps-api</artifactId>
            <version>${coreappsVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>pacsintegration-api</artifactId>
            <version>${pacsintegrationVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api</artifactId>
            <version>${eventVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>dispensing-api</artifactId>
            <version>${dispensingVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appframework-api</artifactId>
            <version>${appframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentryui-api</artifactId>
            <version>${htmlformentryuiVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appui-api</artifactId>
            <version>${appuiVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uicommons-api</artifactId>
            <version>${uicommonsVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>haiticore-api</artifactId>
            <version>${haiticoreVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>attachments-api</artifactId>
            <version>${attachmentsVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>attachments-api-1.11</artifactId>
            <version>${attachmentsVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>attachments-api-2.0</artifactId>
            <version>${attachmentsVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>labtrackingapp-api</artifactId>
            <version>${labtrackingappVersion}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Begin OpenMRS contrib -->

        <dependency>
            <groupId>org.openmrs.contrib</groupId>
            <artifactId>testutils</artifactId>
            <version>${testutilsVersion}</version>
            <scope>test</scope>
        </dependency>

        <!-- this is necessary to use the Html Form Entry Regresstion Test Helper when running against Platform 2.1.0;
            the HFE module should probably be updated to properly utilize this -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.0.1</version>
            <scope>test</scope>
        </dependency>

        <!-- End OpenMRS contrib -->

        <!-- we explicitly use version 3.2.10 since 3.2.11 has a bug which was giving us issues,
            can probably remove this after next sass release -->
        <dependency>
            <groupId>rubygems</groupId>
            <artifactId>sass</artifactId>
            <version>3.2.10</version>
            <type>gem</type>
            <scope>provided</scope>
        </dependency>

    </dependencies>

	<build>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<target>8</target>
						<source>8</source>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<executions>
						<execution>
							<goals>
								<goal>test-jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
					<configuration>
                        <runOrder>alphabetical</runOrder>
                        <!-- see: https://stackoverflow.com/questions/53010200/maven-surefire-could-not-find-forkedbooter-class -->
						<argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
						<includes>
							<include>**/*Test.java</include>
						</includes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                    <properties>
                        <property>
                            <name>openMRSVersion</name>
                            <version>[2.2.0-SNAPSHOT,2.3.0-!)</version>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>openMRSwebVersion</name>
                            <version>[2.2.0-SNAPSHOT,2.3.0-!)</version>
                            <banSnapshots>true</banSnapshots>
                        </property>
                    </properties>
                </configuration>
            </plugin>
        </plugins>

	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
		</repository>
        <repository>
            <id>rubygems-releases</id>
            <url>http://rubygems-proxy.torquebox.org/releases</url>
        </repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>
